CoinMP/examples/csharp/Coinmp.cs


        [DllImport("coinmp.dll")] public static extern int CoinGetSolutionRanges(IntPtr hProb, double[] ObjLoRange, 
									                double[] ObjUpRange, double[] RhsLoRange, double[] RhsUpRange);

        [DllImport("coinmp.dll")] public static extern int CoinGetSolutionBasis(IntPtr hProb, int[] ColStatus, 
                                                    double[] RowStatus);

        [DllImport("coinmp.dll")] public static extern int CoinReadFile(IntPtr hProb, int FileType, string ReadFilename);
        [DllImport("coinmp.dll")] public static extern int CoinWriteFile(IntPtr hProb, int FileType, string WriteFilename);


        [DllImport("coinmp.dll")] public static extern int CoinOpenLogFile(IntPtr hProb, string LogFilename);
        [DllImport("coinmp.dll")] public static extern int CoinCloseLogFile(IntPtr hProb);

        [DllImport("coinmp.dll")] public static extern int CoinGetOptionCount(IntPtr hProb);
        [DllImport("coinmp.dll")] public static extern int CoinGetOptionInfo(IntPtr hProb, int OptionNr, int[] OptionID, 
                                                    int[] GroupType, int[] OptionType);

        [DllImport("coinmp.dll")] public static extern int CoinGetOptionName(IntPtr hProb, int OptionNr);
        [DllImport("coinmp.dll")] public static extern int CoinGetOptionNameBuf(IntPtr hProb, int OptionNr, 
                                                    StringBuilder OptionName, int buflen);

        [DllImport("coinmp.dll")] public static extern int CoinGetOptionShortName(IntPtr hProb, int OptionNr);
        [DllImport("coinmp.dll")] public static extern int CoinGetOptionShortNameBuf(IntPtr hProb, int OptionNr, 
                                                    StringBuilder ShortName, int buflen);

        [DllImport("coinmp.dll")] public static extern int CoinGetIntOptionMinMax(IntPtr hProb, int OptionNr, 
                                                    int[] MinValue, int[] MaxValue);
        [DllImport("coinmp.dll")] public static extern int CoinGetRealOptionMinMax(IntPtr hProb, int OptionNr, 
                                                    double[] MinValue, double[] MaxValue);

        [DllImport("coinmp.dll")] public static extern int CoinGetOptionChanged(IntPtr hProb, int OptionID);

        [DllImport("coinmp.dll")] public static extern int CoinGetIntOption(IntPtr hProb, int OptionID);
        [DllImport("coinmp.dll")] public static extern int CoinSetIntOption(IntPtr hProb, int OptionID, int IntValue);

        [DllImport("coinmp.dll")] public static extern int CoinGetRealOption(IntPtr hProb, int OptionID);
        [DllImport("coinmp.dll")] public static extern int CoinSetRealOption(IntPtr hProb, int OptionID, double RealValue);

        [DllImport("coinmp.dll")] public static extern int CoinGetStringOption(IntPtr hProb, int OptionID);
        [DllImport("coinmp.dll")] public static extern int CoinGetStringOptionBuf(IntPtr hProb, int OptionID, 
                                                    StringBuilder StringValue, int buflen);
        [DllImport("coinmp.dll")] public static extern int CoinSetStringOption(IntPtr hProb, int OptionID, 
                                                    string StringValue);
    }
}
